--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
-				<h1 class="logo">John Markowitz</h1>
+				<h1 class="logo">Manas Kumar</h1>
 				<h2 class="slogan">Professional Web Designer</h2>
 			</header>
 		</div>
