--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						</ul>
 					</nav>
 				<h1 class="logo">Manas Kumar</h1>
-				<h2 class="slogan">Professional Web Designer</h2>
+				<h2 class="slogan">Web and Graphic Designer</h2>
 			</header>
 		</div>
 		<div class="wrapper-holder grey">
