--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 						<ul>
 							<li>
 								<div class="date">
-									<span>12/09</span>
+									<span>06/11</span>
 								</div>
-								<h3>tempora incidunt</h3>
-								<p>Dolor sit consectetur adipisicing elit, sed do eiusmod tempor</p>
+								<h3>Engg. Computer Tech</h3>
+								<p>Completed diploma engineering in Computer Technology</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>02/10</span>
+									<span>12/13</span>
 								</div>
-								<h3>nemo enim ipsam</h3>
-								<p>Laudantium totam rem aperiam eaque ipsa quae</p>
+								<h3>Spec. Graphic Design</h3>
+								<p>Completed graphic design specialization</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>09/11</span>
+									<span>11/17</span>
 								</div>
 								<h3>unde omnis iste</h3>
 								<p>Eaque ipsa quae illo inventore veritatis et quasi architecto </p>
