--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<div class="date">
 									<span>11/17</span>
 								</div>
-								<h3>unde omnis iste</h3>
-								<p>Eaque ipsa quae illo inventore veritatis et quasi architecto </p>
+								<h3>BCA</h3>
+								<p>Completed bachelor in computer application</p>
 							</li>
 							<li>
 								<div class="date">
