--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 							</li>
 							<li>
 								<div class="date">
-									<span>06/12</span>
+									<span>09/16</span>
 								</div>
-								<h3>porro quisquam</h3>
-								<p>Dolorem ipsum quia consectetur adipisci velit sed quia non</p>
+								<h3>Printvenue</h3>
+								<p>Joined a printing company, Printvenue located in Gurgaon, Haryana</p>
 							</li>
 							<li>
 								<div class="date">
-									<span>11/13</span>
+									<span>09/17</span>
 								</div>
-								<h3>dolorem eum</h3>
-								<p>Nodi tempora incidunt ut labore dolore magnam</p>
+								<h3>Paduka Cons. Pvt. LTD.</h3>
+								<p>Joined paduka consultants pvt. ltd. located in Vasant Kunj, New Delhi </p>
 							</li>
 						</ul>
 					</div>
