--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
 									<span>12/13</span>
 								</div>
 								<h3>Spec. Graphic Design</h3>
-								<p>Completed graphic design specialization</p>
+								<p>Completed graphic design specialization, Framebox pune.</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>11/17</span>
 								</div>
 								<h3>BCA</h3>
-								<p>Completed bachelor in computer application</p>
+								<p>Completed bachelor in computer application, IGNOU, New Delhi.</p>
 							</li>
 							<li>
 								<div class="date">
 									<span>09/16</span>
 								</div>
 								<h3>Printvenue</h3>
-								<p>Joined a printing company, Printvenue located in Gurgaon, Haryana</p>
+								<p>Joined a printing company, Printvenue located in Gurgaon, Haryana.</p>
 							</li>
 							<li>
 								<div class="date">
