--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<span>09/17</span>
 								</div>
 								<h3>Paduka Cons. Pvt. LTD.</h3>
-								<p>Joined paduka consultants pvt. ltd. located in Vasant Kunj, New Delhi </p>
+								<p>Joined paduka consultants pvt. ltd. located in Vasant Kunj, New Delhi.</p>
 							</li>
 						</ul>
 					</div>
