--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<span>06/11</span>
 								</div>
 								<h3>Engg. Computer Tech</h3>
-								<p>Completed diploma engineering in Computer Technology</p>
+								<p>Completed diploma engineering in Computer Technology, Nashik</p>
 							</li>
 							<li>
 								<div class="date">
