--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<li class="twitter"><a href="#">Twitter</a></li>
 					<li class="pinterest"><a href="#">Pinterest</a></li>
 				</ul>
-				<p class="copy">Copyright 2019 Manas Kumar. All rights reserved.</p>
+				<p class="copy">Copyright © 2019 Manas Kumar. All rights reserved.</p>
 			</div>
 		</footer>	
 	</div>
