--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<div class="date">
 									<span>06/11</span>
 								</div>
-								<h3>Engg. Computer Tech</h3>
+								<h3>Engg. Computer Tech.</h3>
 								<p>Completed diploma engineering in Computer Technology, Nashik.</p>
 							</li>
 							<li>
