--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
 				<div class="images_holder"><img src="images/pic_08.png" alt=""></div>
 				<div class="box_contact">
 					<span class="email">Kr.manas08667@gmail.com</span>
-					<span class="phone">8130667579</span>
-					<span class="skype">J_mwitz</span>
+					<span class="phone">+91 8130667579</span>
+					<span class="skype">live:9b1a9959a5020eb7</span>
 				</div>
 				<div class="clear"></div>
 			</section>
