--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 				<div class="box_contact">
 					<span class="email">Kr.manas08667@gmail.com</span>
 					<span class="phone">+91 8130667579</span>
-					<span class="skype">https://join.skype.com/invite/he0cCOZu1Rf8</span>
+					<span class="skype">live:9b1a9959a5020eb7</span>
 				</div>
 				<div class="clear"></div>
 			</section>
