--- a/myskills.html
+++ b/myskills.html
@@ -39,8 +39,8 @@
 						<ul class="progress">
 							<li><span class="photoshop">Photoshop</span></li>
 							<li><span class="illustrator">Illustrator</span></li>
-							<li><span class="indesign">InDesign</span></li>
-							<li><span class="flash">Flash</span></li>
+							<li><span class="coreldraw">Coreldraw</span></li>
+							<li><span class="premiere">Adobe Premiere Pro</span></li>
 						</ul>
 					</div>
 					<div class="column column-add">
@@ -49,8 +49,8 @@
 						<ul class="progress">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
-							<li><span class="jquery">jQuery</span></li>
-							<li><span class="seo">SEO</span></li>
+							<li><span class="mysql">mySql</span></li>
+							<li><span class="css">css</span></li>
 						</ul>
 					</div>
 				</div>
