--- a/myskills.html
+++ b/myskills.html
@@ -35,7 +35,7 @@
 				<div class="skills_holder">
 					<div class="column">
 						<h2>Graphic skills:</h2>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+						<p>I am well proficient in visual design tools like Photoshop, Illustrator, Coreldraw, InDesign and other wireframing tools. I have hands-on experience with logo design, typography, color, web layout design, print production, image selection and proven graphic design skills, backed by a strong portfolio. I can incorporate feedback and give diretion well a team player with strong communication and presentation skills.</p>
 						<ul class="progress">
 							<li><span class="photoshop">Photoshop</span></li>
 							<li><span class="illustrator">Illustrator</span></li>
