--- a/myskills.html
+++ b/myskills.html
@@ -49,7 +49,7 @@
 						<ul class="progress">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
-							<li><span class="mysql">mySql</span></li>
+							<li><span class="mysql">mySql & JavaScript</span></li>
 							<li><span class="css">css</span></li>
 						</ul>
 					</div>
