--- a/myskills.html
+++ b/myskills.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="column column-add">
 						<h2>Development  skills:</h2>
-						<p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis. Perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+						<p>Web developers need a combination of graphic design skills and technical computer skills that will allow them to create particular designs on web pages. I have hands-on experience with both of these skills like Graphic design, know HTML, CSS, JavaScript, PHP, and other relevant web design coding languages. I can collaborate, present design specs, troubleshoot website problems, Maintain and update websites, Stay up-to-date on technology.</p>
 						<ul class="progress">
 							<li><span class="html">html</span></li>
 							<li><span class="wordpress">Wordpress</span></li>
