--- a/myskills.html
+++ b/myskills.html
@@ -76,8 +76,9 @@
 					<li class="li_7"><a href="#">jq</a></li>
 					<li class="li_8"><a href="#">seo</a></li>
 				</ul>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-				<p>Qui officia deserunt mollitia animi, id est laborum et dolorum fuga. <span>Et harum quidem rerum facilis est et expedita distinctio</span> . Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+				<p>
+Website maintenance also is an important element of the job. As new features need to be added or old features need to be updated, and as a web developer need to make sure these changes are implemented smoothly and that they do not disrupt the website's features.</p>
+				<p>Graphic designers and UX designers are both equally skilled at creative thinking. I am creating visuals that adhere to conventions (and thus communicate effectively) while retaining a sense of originality (to stand out among the competition) which requires some serious creative and critical thinking. In the same way, as a (user experience) UX designers i will create products that solve users’ problems.</p>
 			</section>
 		</div>
 		<footer id="footer">
