--- a/myskills.html
+++ b/myskills.html
@@ -95,6 +95,7 @@ Website maintenance also is an important element of the job. As new features nee
 		</footer>	
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/cells-by-row.js"></script>
 	<script type="text/javascript" src="js/fancybox/jquery.fancybox.pack.js"></script>
